--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <ul>
                 <li><a href="#search">Быстрый поиск</a></li>
                 <li><a href="#register">Регистрация</a></li>
-                <li><a href="#login">Вход</a></li>
+                <li><a href="spa/index.html">Вход</a></li>
                 <li><a href="#add">Добавить анкету</a></li>
                 <li><a href="#reviews">Отзывы</a></li>
             </ul>
